--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
             }
         });
     </script>
+    <script src="api-config.js"></script>
+    <script src="api.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
